--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,11 @@
     <string name="info2">zweiter Infotext...</string>
     <string name="read_msg">Nachricht einlesen</string>
     <string name="read_key">Schlüssel einlesen</string>
+
+    <!-- Allgemeine Strings -->
     <string name="empty_text_encoded">Die verschlüsselte Nachricht wird hier angezeigt.</string>
     <string name="empty_text_decoded">Die entschlüsselte Nachricht wird hier angezeigt.</string>
+    <string name="empty_text_enter_msg">Gib eine Nachricht ein.</string>
 
     <!-- Beschreibungen in activity_welcome -->
     <string name="welcome_welcome">Willkommen!</string>
