added the Codes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,10 @@
     <string name="y">y</string>
     <string name="z">z</string>
 
+    <string name="pwces">PWces</string>
+    <string name="pwvig">PWvig</string>
+    <string name="pwaes">PWaes</string>
+
 
 
 </resources>
