--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
 
     <!-- Beschreibungen in activity_welcome -->
     <string name="welcome_welcome">Willkommen!</string>
-    <string name="welcome_task">Infotext...\n\nWie möchtest du die App verwenden?</string>
+    <string name="welcome_task">Mit dieser App kannst du verschiedene Verschlüsselungen ausprobieren und über NFC-Karten Nachrichten an deine Freunde schreiben. \n\nWie möchtest du die App verwenden?</string>
     <string name="welcome_guided">Im Unterricht</string>
     <string name="welcome_unguided">Alleine</string>
 
