GUI changing, working on User Experience

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <!-- Allgemeine Strings -->
     <string name="empty_text_encrypted">Die verschlüsselte Nachricht wird hier angezeigt.</string>
     <string name="empty_text_decrypted">Die entschlüsselte Nachricht wird hier angezeigt.</string>
+    <string name="empty_text_decrypted_eve">Die entschlüsselte Nachricht wird hier angezeigt, wenn du eine NAchrichtenkarte an dein Smartphone hältst.</string>
     <string name="empty_text_enter_msg">Gib eine Nachricht ein.</string>
     <string name="empty_text_TODO">Hier kreativ werden!</string> <!-- Platzhalter -->
 
@@ -33,16 +34,13 @@
     <string name="persons_info"></string>
 
     <!-- Beschreibung in activity_cryptotools -->
-    <string name="cryptotools_aes_info"></string>
-    <string name="cryptotools_minikey_title">Minikey Entschlüsselungstool</string>
-    <string name="cryptotools_minikey_info">Du glaubst die Nachricht wurde mit einem Minikey verschlüsselt? dann wirst du wohl mit dem Bruteforce verfahren herangehen müssen. Das bedeutet das du jede mögliche Schlüsselkombination versuchst. Das macht hier ein Programm im Hintergrund aber du kannst es auch selbst mal versuchen.</string>
     <string name="cryptotools_caesar_info">Du willst versuchen denn Text mit Cäsar-Verschlüsselung zu knacken, na dann stell unten mal denn Buchtaben ein, von dem du glaubst das er der Schlüssel war.</string>
     <string name="cryptotools_caesar_title">Cäsar Entschlüsselungstool</string>
 
 
     <!-- Beschreibungen activity_encrypt_details -->
     <string name="encrypt_details_caesar">Deine Cäsarverschlüsselung</string>
-    <string name="encrypt_details_caesar_info">Stelle unten denn Buchstaben ein, nach welchem du deinen Text verschlüsseln möchtest.</string>
+    <string name="encrypt_details_caesar_info">Stelle unten den Buchstaben ein, nach welchem du deinen Text verschlüsseln möchtest.</string>
 
 
 
