added last key, added mysterious feature for vigenerekeys and tidied up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="vigenere">Minikey</string>
     <string name="aes">AES</string>
 
+    <string name="none">keine</string>
     <string name="a">a</string>
     <string name="b">b</string>
     <string name="c">c</string>
