--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,11 @@
 
     <!-- Hier können jetzt alle Strings eingetragen werden -->
     <string name="alice">Alice</string>
+    <string name="alice_short">A</string>
     <string name="bob">Bob</string>
+    <string name="bob_short">B</string>
     <string name="eve">Eve</string>
+    <string name="eve_short">E</string>
     <string name="info2">zweiter Infotext...</string>
     <string name="read_msg">Nachricht einlesen</string>
     <string name="read_key">Schlüssel einlesen</string>
@@ -25,7 +28,7 @@
 
     <!-- Beschreibungen in activity_welcome -->
     <string name="welcome_welcome">Willkommen!</string>
-    <string name="welcome_task">Mit dieser App kannst du verschiedene Verschlüsselungen ausprobieren und über NFC-Karten Nachrichten an deine Freunde schreiben.\nStelle bitte zuerst sicher, dass du NFC angeschalten hast.</string>
+    <string name="welcome_task">Mit dieser App kannst du verschiedene Verschlüsselungen ausprobieren und über NFC-Karten Nachrichten an deine Freunde schreiben.\n\nStelle bitte zuerst sicher, dass du NFC angeschalten hast.</string>
     <string name="welcome_guided">Im Unterricht</string>
     <string name="welcome_unguided">Alleine</string>
     <string name="welcome_use">Wie möchtest du die App verwenden?</string>
@@ -37,7 +40,7 @@
     <string name="persons_alice">"Alice schreibt Nachrichten und sendet sie an Bob. Sie kann diese Nachrichten zuvor verschlüsseln."</string>
     <string name="persons_bob">Bob empfängt Nachrichten von Alice und kann diese, falls nötig, entschlüsseln.</string>
     <string name="persons_eve">Eve fängt Nachrichten ab, die nicht an sie adressiert sind. Sie muss selbst versuchen die Nachrichten zu entschlüsseln.</string>
-    <string name="persons_info"></string>
+    <string name="persons_info">Du kannst die Auswahl später wieder ändern.</string>
 
     <!-- Beschreibung in activity_nfcwrite -->
     <string name="nfc_info">Wähle aus, was du auf die NFC-Karte schreiben willst. Halte anschließend die Karte an dein Handy. Meistens befindet sich das Lesegerät in der Nähe von der Kamera.</string>
